--- a/allpic-frontend/src/components/SharingOptions/SharingOptions.scss
+++ b/allpic-frontend/src/components/SharingOptions/SharingOptions.scss
@@ -1,14 +1,11 @@
 @import '../../styles/variables.scss';
 
 .sharing-dropdown {
-  min-width: 30rem;
-}
-
-.sharing-options {
-
-    .sharing-option {
-      &-link-body {
-        flex-grow: 1;
-      }
-    }
+  
+  @media screen and (min-width: 769px) {
+    min-width: 30rem;
+  }
+  @media screen and (max-width: 768px) {
+    min-width: 20rem;
+  }
 }
