--- a/allpic-frontend/src/views/ImageView.scss
+++ b/allpic-frontend/src/views/ImageView.scss
@@ -3,11 +3,14 @@
 .image-details {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+
+  margin-bottom: 2.5em;
 }
 
 .image-share {
   display: flex;
   justify-content: flex-end;
 
-  margin-bottom: 5em;
+  margin-bottom: 2.5em;
 }
